test_cases/negative/shadow_in_function.snek
value = 10;

def Foo(bar) {
    value = Add(bar, 5);
    return Add(value, value);
}

export DEFAULT = Foo(value);
